daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: myproxy
  namespace: myproxy
spec:
  selector:
    matchLabels:
      app: myproxy
  template:
    metadata:
      labels:
        app: myproxy
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
              hostPort: 81
