datauser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datauser
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datauser
  template:
    metadata:
      labels:
        app: datauser
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          volumeMounts:
            - name: data-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data
