deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-test
  template:
    metadata:
      labels:
        app: deployment-test
    spec:
      containers:
        - name: debian-container
          image: debian:stable
          command:
            - sh
            - -c
            - "while true; do echo 'Hello, ${USERNAME}!'; sleep 10; done"
