ingress-test-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test-1
  template:
    metadata:
      labels:
        app: ingress-test-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.22
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: ingress-test-1-config
