statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: state-app
  namespace: advanced
spec:
  serviceName: "state-app"
  replicas: 1
  selector:
    matchLabels:
      app: state-app
  template:
    metadata:
      labels:
        app: state-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          volumeMounts:
            - name: longhorn-volume
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: longhorn-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
