ingress-test-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-1
  namespace: default
spec:
  selector:
    app: ingress-test-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
