ingress-test-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-2
  namespace: default
spec:
  selector:
    app: ingress-test-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
