ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress-test.s072173.edu.slurm.io
    http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: ingress-test-1
            port:
              number: 80
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: ingress-test-2
            port:
              number: 80
